@@ -3,18 +3,18 @@ package cz.habarta.typescript.generator.emitter;
 
 import cz.habarta.typescript.generator.TsType;
 import cz.habarta.typescript.generator.compiler.Symbol;
-import java.util.Collections;
+
 import java.util.List;
 
 
 public class TsAliasModel extends TsDeclarationModel {
-    
+
     private final List<TsType.GenericVariableType> typeParameters;
     private final TsType definition;
 
     public TsAliasModel(Class<?> origin, Symbol name, List<TsType.GenericVariableType> typeParameters, TsType definition, List<String> comments) {
         super(origin, null, name, comments);
-        this.typeParameters = typeParameters != null ? typeParameters : Collections.emptyList();
+        this.typeParameters = typeParameters == null ? List.of() : typeParameters;
         this.definition = definition;
     }
 
